--- a/index.html
+++ b/index.html
@@ -54,7 +54,7 @@
         </form>
         <h2 class="balance"></h2>
     </main>
-    <script src="app.js"></script>
+    <script src="main.js"></script>
 </body>
 
 </html>
