--- a/edit.html
+++ b/edit.html
@@ -14,5 +14,6 @@
           <button class="remove">Usun</button>
         </div>
       </ul>
+      <script src="edit.js"></script>
 </body>
 </html>
