--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
 </head>
 
 <body>
-    <header class="header">
+    <!-- <header class="header">
         <h1>Budgett</h1>
         <div class="header__logo"></div>
     </header>
@@ -54,7 +54,15 @@
         </form>
         <h2 class="balance"></h2>
     </main>
-    <script src="main.js"></script>
+    <script src="main.js"></script> -->
+    <ul class="list">
+        <div class="incomeDiv">
+          <li class="list-item">test1 1000</li>
+          <button class="edit">Edit</button>
+          <button class="remove">Usun</button>
+        </div>
+      </ul>
+      <script src="edit.js"></script>
 </body>
 
 </html>
