render expenses added

--- a/index.html
+++ b/index.html
@@ -35,7 +35,7 @@
             </div>
             <p class="incomes-total"></p>
         </form>
-        <form name="form">
+        <form id="addExpenseForm" name="form">
             <label>Wydatki
                 <input type="text" class="expense-input input" placeholder="nazwa" name="name">
                 <input type="number" class="expense-amount input" placeholder="wartość" name="amount">
@@ -44,13 +44,13 @@
                 <i class="fas fa-plus-square"></i>
             </button>
 
-            <div class="expense-container">
-                <ul class="expense-list list">
+            <div class="expenses-container">
+                <ul class="expenses-list list">
 
                 </ul>
 
             </div>
-            <p class="expense-total"></p>
+            <p class="expenses-total"></p>
         </form>
         <h2 class="balance"></h2>
     </main>
