Changing the file structure

--- a/index.html
+++ b/index.html
@@ -17,43 +17,46 @@
         <h1>Budgett</h1>
         <div class="header__logo"></div>
     </header>
+   <div class="wrapper">
     <main class="forms__container">
-        <form id="addIncomeForm" name="form">
-            <label>Przychody
-                <input type="text" class="income-input input" placeholder="nazwa"  name="name" value="test">
-                <input type="number" class="income-amount input" placeholder="wartość"  name="amount">
-            </label>
-            <button class="income-button" type="submit" name="submit-btn">
-                <i class="fas fa-plus-square"></i>
-            </button>
-
+        <section class="section">
+            <form id="addIncomeForm" name="form">
+                <label>Przychody
+                    <input type="text" class="income-input input" placeholder="nazwa" name="name" value="test">
+                    <input type="number" class="income-amount input" placeholder="wartość" name="amount">
+                </label>
+                <button class="income-button" type="submit" name="submit-btn">
+                    <i class="fas fa-plus-square"></i>
+                </button>
+            </form>
             <div class="incomes-container">
                 <ul class="incomes-list">
 
                 </ul>
-
+                <p class="incomes-total"></p>
             </div>
-            <p class="incomes-total"></p>
-        </form>
-        <form id="addExpenseForm" name="form">
-            <label>Wydatki
-                <input type="text" class="expense-input input" placeholder="nazwa" name="name">
-                <input type="number" class="expense-amount input" placeholder="wartość" name="amount">
-            </label>
-            <button class="expense-button" type="submit" name="submit-btn">
-                <i class="fas fa-plus-square"></i>
-            </button>
+        </section>
+        <section class="section">
+            <form id="addExpenseForm" name="form">
+                <label>Wydatki
+                    <input type="text" class="expense-input input" placeholder="nazwa" name="name">
+                    <input type="number" class="expense-amount input" placeholder="wartość" name="amount">
+                </label>
+                <button class="expense-button" type="submit" name="submit-btn">
+                    <i class="fas fa-plus-square"></i>
+                </button>
+            </form>
 
             <div class="expenses-container">
                 <ul class="expenses-list list">
 
                 </ul>
-
+                <p class="expenses-total"></p>
             </div>
-            <p class="expenses-total"></p>
-        </form>
+        </section>
         <h2 class="balance"></h2>
     </main>
+   </div>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/uuid/8.3.2/uuid.min.js"
         integrity="sha512-UNM1njAgOFUa74Z0bADwAq8gbTcqZC8Ej4xPSzpnh0l6KMevwvkBvbldF9uR++qKeJ+MOZHRjV1HZjoRvjDfNQ=="
         crossorigin="anonymous" referrerpolicy="no-referrer"></script>
