create confirm function and calculate balance

--- a/index.html
+++ b/index.html
@@ -18,6 +18,9 @@
         <div class="header__logo"></div>
     </header>
    <div class="wrapper">
+    <h2 class="balance-text">
+        <span class="balance-total"></span>
+    </h2>
     <main class="forms__container">
         <section class="section">
             <form id="addIncomeForm" name="form">
@@ -54,7 +57,6 @@
                 <p class="expenses-total"></p>
             </div>
         </section>
-        <h2 class="balance"></h2>
     </main>
    </div>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/uuid/8.3.2/uuid.min.js"
